<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SplashScreenActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hologram"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lavLogo"
        android:layout_marginTop="-60dp"
        />

    <TextView
        android:id="@+id/tvModulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_module"
        android:textSize="25sp"
        android:textColor="@color/gray"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_version"
        android:textSize="20sp"
        android:layout_below="@+id/tvModulo"
        android:layout_centerHorizontal="true"
        android:textColor="@color/silver"
        />
    <ProgressBar
        android:id="@+id/progessBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVersion"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvAutor"
        android:text="@string/splash_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/progessBar"
        />


</RelativeLayout>