<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ToolbarMainStyle">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiente_azul"
            app:contentScrim="@color/blue_night"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/activity_main_weather">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin"
                android:elevation="0dp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/circulo_naranja"
                    android:layout_margin="20dp"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/activity_main_sun"
                    />

                <ImageView
                    android:id="@+id/ivCloud"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_cloud"
                    android:layout_margin="20dp"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/activity_main_cloud"
                    android:layout_gravity="center"
                    />



        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLocations"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
       android:layout_gravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>