<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LocationDetailActivity">
    <!--
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/blue_night"
        android:elevation="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:showDividers="middle">

        <!-- Se divide la pantalla en dos, parte superior e inferior,
        la parte superio contiene la imagen, temperatura, hora y descripción
        del clima -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_sunny"
            android:fitsSystemWindows="true"
            >

            <TextView
                android:id="@+id/tvCiudadName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ciudad de México"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/roboto" />
            <TextView
                android:id="@+id/tvFechaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="8:30 PM"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto_thin"
                android:layout_below="@+id/tvCiudadName"
                />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/circulo_naranja"
                android:layout_below="@+id/tvFechaHora"
                />
            <TextView
                android:id="@+id/tvTemperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25° C"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textSize="50sp"
                android:fontFamily="@font/roboto"
                android:layout_below="@+id/tvFechaHora"
                android:layout_toEndOf="@+id/ivIcon"
                />

            <TextView
                android:id="@+id/tvTempSensation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Sensación de 25"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_thin"
                android:layout_below="@+id/tvTemperatura"
                android:layout_toEndOf="@+id/ivIcon"
                />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Cielo claro"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_margin="20dp"

                android:textSize="25sp"
                android:fontFamily="@font/roboto_thin"
                android:layout_below="@+id/ivIcon"
                />
        </RelativeLayout>


        <!-- En la segunda sección se muestra información adicional
         como presión, humedad, temperaturas máximas y mínima-->
        <ProgressBar
            android:id="@+id/pbConexion"
            style="?attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvPresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_presion"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvPresionValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1029 hPa"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvHumedad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_humedad"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvHumedadValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="75 %"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_tempmin"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvTempMinValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5° C"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_tempmax"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvTempMaxValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="35° C"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvVelViento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_velviento"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvVelVientoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0 m/s"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvDirViento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_dirviento"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvDirVientoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0°"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvVisibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_visibilidad"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvVisibilidadValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1 Km"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvSalidaSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_salida_sol"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvSalidaSolValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6:50 am"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvPuestaSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_puesta_sol"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvPuestaSolValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6:50 pm"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_latitud"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvLatitudValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60.0"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail_longitud"
                android:textColor="@color/blue_night"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:id="@+id/tvLongitudValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="-60.0"
                android:textColor="@color/orange"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:fontFamily="@font/roboto"
                />
        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>